# ITMO

./: .gitignore  README.md
term_1/Java/: README.md
term_1/Java/01_Sum/: Sum.java  SumBigInteger.java
term_1/Java/02_Reverse/: Reverse.java  ReverseMax.java  ReverseTranspose.java
term_1/Java/04_WordStat/: in.txt  out.txt
term_1/Java/05_FastReverse/: out.txt
term_1/Java/05tr/: in.txt
term_1/Java/06_WordStat+/: in.txt  out.txt
term_1/Java/13_exam/: inputDataTest.in  out1.txt  (+3 more)
term_2/С++/07_Copycat/: CMakeLists.txt  makefile
term_2/С++/07_Copycat/first/: PlaneFigure.h  Rect.cpp  Rect.h  main.cpp  makefile
term_2/С++/07_Copycat/first/main.dSYM/Contents/Resources/DWARF/: main
term_2/С++/07_Copycat/second/: main.cpp  makefile
term_2/С++/07_Copycat/second/main.dSYM/Contents/Resources/DWARF/: main
term_2/С++/07_Copycat/third/: Date.cpp  Date.h  Person.cpp  Person.h  Student.cpp  Student.h  main.cpp  makefile
term_2/С++/07_Copycat/third/main.dSYM/Contents/Resources/DWARF/: main
term_2/С++/09_Over9000/: CMakeLists.txt  README.md  main.cpp
term_2/С++/09_Over9000/lib/: ExpressionGenerator.h  Quiz.h  Random.h  Value.h  ValuePrefixParser.h
term_2/С++/09_Over9000/src/: ExpressionGenerator.cpp  Quiz.cpp  Random.cpp  Value.cpp  ValuePrefixParser.cpp
term_5/ML/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  H.py  I.py  L.py  M.py  N.py  O.py  P.py  Q.py
term_5/ydxJS/: A.js  B.js  C.js  D.js  E.js  G.js  check.js
term_6/Economics/: generator.py
term_7/CT/: a.go  input.txt  output.txt
term_8/GT/: A.go  C.go  D.go  H.go  K.java  N.go  R.go  S.go  T.go
(+1023 files in other folders)
